modified:index.html and style.css

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
             </ul>
         </nav>
     </header>
-
     <!-- Main -->
     <main>
         <!-- Section 01 -->
@@ -66,7 +65,6 @@
                 </div>
             </div>
         </section>
-
         <!-- Section 03 -->
         <section class="section03">
             <div class="left-box">
@@ -106,8 +104,7 @@
                     </li>
                 </ul>
             </div>
-        </section>`
-
+        </section>
         <!-- Section 04 -->
         <section class="section04">
             <ul class="left-box">
@@ -143,7 +140,6 @@
                 <p>You’ve bootstrapped and delivered an MVP, and some investors and advisors are interested in having a chat with you. As an Open Enterprise, you can onboard them seamlessly into your digital organization and align them with your success.</p>
             </div>
         </section>
-
         <!-- Section 05 -->
         <section class="section05">
             <div class="left-box">
@@ -189,7 +185,6 @@
                 </div>
             </div>
         </section>
-        
         <!-- Section 06 -->
         <section class="section06">
             <div class="heading02">
@@ -224,7 +219,7 @@
             </div>
             <button class="sec06-button02"><a href="#">View more</a></button>
         </section>
-        <!-- 07 -->
+        <!-- Section 07 -->
         <section class="section07">
             <div class="left-box">
                 <h2>Start an Open Enterprise</h2>
@@ -237,10 +232,8 @@
                 <img class="img2" src="./assets/image/image02.png" alt="second-img">
             </div>
         </section>
-        <footer>
-
-        </footer>
     </main>
+    <!-- Footer -->
     <footer>
         <ul class="footer">
             <li class="first-list">
@@ -252,7 +245,6 @@
             <li class="last-list02"><a href="#">Contact us</a></li>
         </ul>
     </footer>
-    
 </body>
 </html>
 
