--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <header>
         <nav>
             <ul class="nav-list">
-                <li class="first-list">
+                <li>
                     <img src="./assets/image/logo.svg" alt="logo-img">
                     <h1>Open Enterprise</h1>
                 </li>
                 <li><a href="#">Why Open Enterprise</a></li>
                 <li><a href="#">Features</a></li>
                 <li><a href="#">Contribute</a></li>
-                <li class="last-list"><a href="#">Request early access</a></li>
+                <li><a href="#">Request early access</a></li>
             </ul>
         </nav>
     </header>
@@ -236,13 +236,13 @@
     <!-- Footer -->
     <footer>
         <ul class="footer">
-            <li class="first-list">
+            <li>
                 <h6>Open Enterprise</h6>   
             </li>
             <li><a href="#">Documentation</a></li>
             <li><a href="#">GitHub</a></li>
             <li><a href="#">Twitter</a></li>
-            <li class="last-list02"><a href="#">Contact us</a></li>
+            <li><a href="#">Contact us</a></li>
         </ul>
     </footer>
 </body>
